<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/title_abalone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/game_title"
        android:textAlignment="center"
        android:textColor="@color/text_primary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_abalone">

        <Button
            android:id="@+id/btn_player_vs_player"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/player_vs_player"
            android:textSize="18sp"
            style="@style/AbaloneButton" />

        <Button
            android:id="@+id/btn_player_vs_ai"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/player_vs_ai"
            android:textSize="18sp"
            style="@style/AbaloneButton" />

        <Button
            android:id="@+id/btn_online_multiplayer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/online_multiplayer"
            android:textSize="18sp"
            style="@style/AbaloneButton" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/settings"
            android:textSize="18sp"
            style="@style/AbaloneButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>